# crefin-ml-api

./: main.py  pyproject.toml
app/: main.py
app/api/routes/: prediction.py
app/core/: config.py
app/models/: ml_models.py
app/schemas/: requests.py
